commit from docker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "sqlmodel (>=0.0.27,<0.0.28)",
     "dotenv (>=0.9.9,<0.10.0)",
     "alembic (>=1.17.2,<2.0.0)",
-    "ruff (>=0.14.5,<0.15.0)"
+    "ruff (>=0.14.5,<0.15.0)",
+    "docker (>=7.1.0,<8.0.0)"
 ]
 
 
