--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     ports:
       - "8005:8000"
     depends_on:
-      - db
+      - db:
+          condition: service_healthy
     env_file:
       - .env
 
